@@ -15,6 +15,8 @@ HISTORY
 - Fixed: "Normal paragraph" default style didn't reset css class
   [oliverroch]
 
+- Show dimensions of original image in imageupload-popup
+  [tom_gross]
 
 1.1rc7 (2009-11-18)
 -------------------
